# acp-rust-sdk

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  mdbook.yml
src/agent-client-protocol/: Cargo.toml
src/agent-client-protocol-conductor/: Cargo.toml
src/agent-client-protocol-conductor/src/: debug_logger.rs  lib.rs  mcp_bridge.rs
src/agent-client-protocol-conductor/tests/: arrow_proxy_eliza.rs  nested_arrow_proxy.rs  nested_conductor.rs  trace_client_mcp_server.rs  trace_generation.rs  trace_mcp_tool_call.rs  trace_snapshot.rs
src/agent-client-protocol-cookbook/: Cargo.toml
src/agent-client-protocol-cookbook/src/: lib.rs
src/agent-client-protocol-derive/: Cargo.toml
src/agent-client-protocol-rmcp/: Cargo.toml
src/agent-client-protocol-test/: Cargo.toml
src/agent-client-protocol-test/src/: test_binaries.rs
src/agent-client-protocol-trace-viewer/: Cargo.toml
src/agent-client-protocol-trace-viewer/src/: lib.rs
src/agent-client-protocol/examples/: simple_agent.rs  yolo_one_shot_client.rs
src/agent-client-protocol/src/: acp_agent.rs  capabilities.rs  component.rs  jsonrpc.rs  lib.rs  session.rs  stdio.rs
src/agent-client-protocol/src/mcp_server/: builder.rs
src/agent-client-protocol/src/schema/: enum_impls.rs
src/agent-client-protocol/src/schema/client_to_agent/: requests.rs
src/agent-client-protocol/tests/: jsonrpc_error_handling.rs
src/yopo/: Cargo.toml
src/yopo/src/: lib.rs  main.rs
