[workspace]
members = [
    "src/agent-client-protocol",
    "src/agent-client-protocol-conductor",
    "src/agent-client-protocol-cookbook",
    "src/agent-client-protocol-derive",
    "src/agent-client-protocol-rmcp",
    "src/agent-client-protocol-test",
    "src/agent-client-protocol-trace-viewer",
    "src/yopo",
]
resolver = "3"

[workspace.package]
authors = ["Zed <hi@zed.dev>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/agentclientprotocol/rust-sdk"
homepage = "https://github.com/agentclientprotocol/rust-sdk"

[workspace.dependencies]
# Internal crates
agent-client-protocol = { path = "src/agent-client-protocol", version = "0.11.1" }
agent-client-protocol-conductor = { path = "src/agent-client-protocol-conductor", version = "0.11.1" }
agent-client-protocol-derive = { path = "src/agent-client-protocol-derive", version = "0.11.0" }
agent-client-protocol-rmcp = { path = "src/agent-client-protocol-rmcp", version = "0.11.1" }
agent-client-protocol-test = { path = "src/agent-client-protocol-test" }
agent-client-protocol-trace-viewer = { path = "src/agent-client-protocol-trace-viewer", version = "0.11.0" }
yopo = { package = "agent-client-protocol-yopo", path = "src/yopo" }

# Core async runtime
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Protocol
agent-client-protocol-schema = { version = "=0.12.2", features = ["tracing"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
schemars = { version = "1.0", features = ["derive"] }

# UUID generation
uuid = { version = "1.18", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# MCP SDK
rmcp = { version = "1.6.0", features = ["server", "transport-io", "schemars"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# HTTP
axum = "0.8"
async-process = "2"
async-stream = "0.3.6"
blocking = "1"
chrono = "0.4"
futures = "0.3.32"
futures-concurrency = "7.6.3"
jsonrpcmsg = "0.1.2"
open = "5"
rustc-hash = "2.1.1"
shell-words = "1.1"
strip-ansi-escapes = "0.2"


# Proc macros
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

# Testing
expect-test = "1.5"
regex = "1.12.2"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let-underscore = "warn"
missing_debug_implementations = "warn"
# missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
type_complexity = "allow"
wildcard_imports = "allow"
