[package]
name = "agent-client-protocol-conductor"
version = "0.11.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Conductor for orchestrating Agent Client Protocol proxy chains"
keywords = ["acp", "agent", "conductor", "ai"]
categories = ["development-tools"]

[[bin]]
name = "agent-client-protocol-conductor"
path = "src/main.rs"

[features]
test-support = []

[dependencies]
agent-client-protocol.workspace = true
agent-client-protocol-trace-viewer.workspace = true
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
strip-ansi-escapes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
agent-client-protocol-test.workspace = true
yopo.workspace = true
expect-test.workspace = true
regex.workspace = true
rmcp = { workspace = true, features = ["client", "server", "transport-io", "transport-child-process"] }
schemars.workspace = true

[lints]
workspace = true
