[package]
name = "agent-client-protocol-rmcp"
version = "0.11.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "rmcp integration for Agent Client Protocol MCP servers"
keywords = ["acp", "agent", "proxy", "mcp", "rmcp"]
categories = ["development-tools"]

[dependencies]
agent-client-protocol.workspace = true
futures-concurrency.workspace = true
rmcp.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
schemars.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
