[package]
name = "agent-client-protocol-trace-viewer"
version = "0.11.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Interactive sequence diagram viewer for Agent Client Protocol trace files"
keywords = ["acp", "trace", "debugging", "visualization"]
categories = ["development-tools::debugging"]

[lib]
name = "agent_client_protocol_trace_viewer"
path = "src/lib.rs"

[[bin]]
name = "agent-client-protocol-trace-viewer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
open.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
