[package]
name = "agent-client-protocol"
version = "0.11.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core protocol types and traits for the Agent Client Protocol"
keywords = ["acp", "agent", "protocol", "ai"]
categories = ["development-tools"]

[features]
default = []

# Forward unstable features from agent-client-protocol-schema.
# Enable these to get support for the corresponding unstable ACP methods.
unstable = [
    "unstable_auth_methods",
    "unstable_boolean_config",
    "unstable_logout",
    "unstable_message_id",
    "unstable_session_additional_directories",
    "unstable_session_close",
    "unstable_session_fork",
    "unstable_session_model",
    "unstable_session_resume",
    "unstable_session_usage",
]
unstable_auth_methods = ["agent-client-protocol-schema/unstable_auth_methods"]
unstable_boolean_config = ["agent-client-protocol-schema/unstable_boolean_config"]
unstable_logout = ["agent-client-protocol-schema/unstable_logout"]
unstable_message_id = ["agent-client-protocol-schema/unstable_message_id"]
unstable_session_additional_directories = ["agent-client-protocol-schema/unstable_session_additional_directories"]
unstable_session_close = ["agent-client-protocol-schema/unstable_session_close"]
unstable_session_fork = ["agent-client-protocol-schema/unstable_session_fork"]
unstable_session_model = ["agent-client-protocol-schema/unstable_session_model"]
unstable_session_resume = ["agent-client-protocol-schema/unstable_session_resume"]
unstable_session_usage = ["agent-client-protocol-schema/unstable_session_usage"]

[dependencies]
agent-client-protocol-schema.workspace = true
agent-client-protocol-derive.workspace = true
anyhow.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
rustc-hash.workspace = true
jsonrpcmsg.workspace = true
rmcp = { workspace = true, features = ["server"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
async-process.workspace = true
blocking.workspace = true
shell-words.workspace = true
strip-ansi-escapes.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
agent-client-protocol-test.workspace = true
clap.workspace = true
expect-test.workspace = true

[lints]
workspace = true
