[package]
name = "agent-client-protocol-yopo"
version = "0.11.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "YOPO (You Only Prompt Once) - A simple ACP client for one-shot prompts"
publish = false

[lib]
name = "yopo"
path = "src/lib.rs"

[[bin]]
name = "yopo"
path = "src/main.rs"

[dependencies]
agent-client-protocol.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
